Fixing icon size and where the search sticks on mobile.

--- a/src/components/icon-search/icon-search.css
+++ b/src/components/icon-search/icon-search.css
@@ -109,6 +109,9 @@
 
 			&:is(figure) {
 				/* Layout */
+				inline-size: 100%;
+
+				/* Layout */
 				margin-block: 1--step;
 			}
 
